--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
 	],
 	"scripts": {
 		"build": "rollup -c",
-		"prepublishOnly": "pnpm build",
-		"pretest": "pnpm build",
+		"prepublishOnly": "npm run build",
+		"pretest": "npm run build",
 		"format": "prettier --write ."
 	},
 	"dependencies": {
