--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "tauri-plugin-usagestats"
 version = "0.1.0"
 authors = ["Jack Weilage"]
 description = "A Tauri plugin to interact with the Android UsageStats API"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/jack-weilage/tauri-plugin-usagestats"
 edition = "2021"
 rust-version = "1.77.2"
 exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
